# java2c

./: .clang-format  CMakeLists.txt
include/: class_file_parser.h  input.h  types.h  utils.h
src/: input.c  main.c  utils.c
